@@ -28,6 +28,8 @@ Changes for Perl Application Development and Refactoring Environment
     - Upgrade Wx tree navigation to handle detached floating panels (ADAMK)
     - Implemented Smart Highlighting. Double click on a word to select it and
       a green squiggle will be shown for each matching word (AZAWAWI)
+    - Added a directory picker to the Directory Tree, now users can choose
+      which is the project directory (GABRIELMAD)
 
 0.41 2009.07.23
     - Remove Experimental mode.
